========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'v2' branch.
The master branch will rely on the Git repository history.


2020-11-01

 - Fixed #255: Added a new beancount.core.prices.project() method to project
   prices to another cost currency.


2020-10-26

 - Fixed Github Actions workflows and Wheel generation.
 - Released 2.3.3 to trigger new binaries.


2020-10-25

 - Removed the part of setup_test checks running the binaries with --help, as
   they fail starting at 3.8. Someone with more time would create a test using
   pytest-virtualenv.


2020-10-17

 - Fixed #566: Duplicate postings on entries should count toward distinct
   hashes.


2020-10-10

 - Moved Emacs support to its own repository
   (http://github.com/beancount/beancount-mode).


2020-09-12

 - Added metadata on implicitly generated Price directives (from implicit_prices
   plugin).


2020-09-12

 - Released 2.3.2.


2020-09-07

 - Fixed #401: Fixed initialization bugs on min() and max() functions for the SQL
   aggregator.
 - Fixed #364: Fixed important core bug in how the CostSpec were converted to
   Cost for cost specs with total and per-unit cost numbers, like this {106.935
   # 6.98 USD}. For short positions, the cost was computed as negative. In a
   sense this was a naive bug, but a very important one. This occurred only for
   short positions.


2020-08-19

 - Added an option to the printer to allow an arbitraty Python value to be
   output. This is useful when creating values programmatically with types not
   supported by the syntax.


2020-07-25

 - Release 2.3.1 as dependency for beanprice.
 - Moved beancount.prices.find_prices to beancount.ops.find_prices in
   preparation of moving price fetching code to a new 'beanprice' repository.


2020-07-17

 - Fixed bug #508 in beancount.plugins.unique_prices.


2020-07-06

 - Updated export script to honor lowercase "ignore" instead of "IGNORE" and set